turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:17: error: ')' expected but '}' found.
	droite(90})
                 ^Source:17: error: ';' expected but ')' found.
	droite(90})
                  ^