turtleart.lessons.turtleart.Main.HouseThree.scala.code
override def run() {

	for (j<-1 to 4) {
	
	avance(30)
droite(30)
for (k<-1 to 3) {
		avance(30)
		droite(120)
	}
droite(60)
avance(30)
droite(90)
for(i<-1 to 2) {
	avance(30)
	droite(90})
leveCrayon()
gauche(90)
avance(50)
droite(90)
baisseCrayon()	

	}
}
